0028244: Visualization - AIS_AngleDimension throws exception for 180 degree

Small correction of test case for issue CR28244